<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation_graph"
    app:startDestination="@id/ticketsFragment">

    <fragment
        android:id="@+id/ticketsFragment"
        android:name="com.ikrom.tickets.TicketsFragment"
        android:label="@string/tickets_screen_label"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/hotelsFragment"
        android:name="com.ikrom.hotels.HotelsFragment"
        android:label="@string/hotels_screen_label" />

    <fragment
        android:id="@+id/shorterFragment"
        android:name="com.ikrom.shorter.ShorterFragment"
        android:label="@string/shorter_screen_label"
        tools:layout="@layout/fragment_shorter" />

    <fragment
        android:id="@+id/subscriptionsFragment"
        android:name="com.ikrom.subscribtions.SubscriptionsFragment"
        android:label="@string/subscriptions_screen_label"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ikrom.profile.ProfileFragment"
        android:label="@string/profile_screen_label"
        tools:layout="@layout/fragment_profile" />
</navigation>
